Fixed whitespace issues on req

--- a/public/css/pdf.css
+++ b/public/css/pdf.css
@@ -29,8 +29,8 @@ body {
     display: block;
     height: auto;
     white-space: nowrap;
-    vertical-align: middle;
     page-break-inside: avoid !important;
+    page-break-after:auto !important;
     margin: 0;
 }
 .feature-table .left{
@@ -38,7 +38,6 @@ body {
     display: inline-block;
     white-space: normal;
     text-align: left;
-
 }
 
 .feature-table .right{
